--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,9 @@ body {
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
+    --primary: 125 62% 59%;
+    --primary-light: 125, 62%, 59%, 0.4;
+    --primary-foreground: 125 89% 94%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
