--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,14 @@ body {
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: 125 62% 59%;
-    --primary-light: 125, 62%, 59%, 0.4;
+    --primary-light: 125 89% 94%;
     --primary-foreground: 125 89% 94%;
-    --secondary: 0 0% 96.1%;
+    --secondary: 186 98% 40%;
+    --secondary-light: 186 80% 92%;
     --secondary-foreground: 0 0% 9%;
+    --tertiary: 211 100% 50%;
+    --tertiary-light: 210 100% 95%;
+    --blue-dark: 213 19% 39%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
