--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ body {
     --tertiary: 211 100% 50%;
     --tertiary-light: 210 100% 95%;
     --blue-dark: 213 19% 39%;
+    --blue: 213 100% 61%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
@@ -37,7 +38,7 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+    --radius: 0.5rem; /* 8px */
   }
   .dark {
     --background: 0 0% 3.9%;
