--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,7 @@ body {
 .arrow-bg {
   @apply bg-[#007BFF] text-white font-bold flex items-center justify-center;
   clip-path: polygon(0 0, 90% 0, 100% 50%, 90% 100%, 0 100%, 10% 50%);
+  transform: translateX(-6%) scale(1.1);
 }
 
 .arrow-bg-first {
